--- a/src/components/TaskItem/TaskItem.css
+++ b/src/components/TaskItem/TaskItem.css
@@ -13,7 +13,7 @@
     cursor: pointer;
 }
 
-.remove-task-button {
+.remove-task-button, .see-task-details {
     background-color: #444;
     border: none;
     font-size: 24px;
